[gd_scene load_steps=39 format=2]

[ext_resource path="res://player/NightBorne.png" type="Texture" id=1]
[ext_resource path="res://player/player.gd" type="Script" id=2]
[ext_resource path="res://hud/hud.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sounds/sword.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/bgs.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/playerDeath.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/playerHurt.wav" type="AudioStream" id=7]

[sub_resource type="Animation" id=3]
resource_name = "attack"
length = 0.24
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02, 0.04, 0.06, 0.08, 0.1, 0.12, 0.14, 0.16, 0.18, 0.2, 0.22 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57 ]
}

[sub_resource type="Animation" id=5]
resource_name = "death"
length = 2.3
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114 ]
}

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=24]
resource_name = "jump"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "takeDamage"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 69, 70, 71, 72, 73 ]
}

[sub_resource type="Animation" id=2]
resource_name = "walk"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 23, 24, 25, 26, 27, 28 ]
}

[sub_resource type="CapsuleShape2D" id=6]
radius = 12.0
height = 7.33333

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "death"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "takeDamage"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=14]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachine" id=9]
states/attack/node = SubResource( 7 )
states/attack/position = Vector2( 478, 269 )
states/death/node = SubResource( 8 )
states/death/position = Vector2( 841, 269 )
states/idle/node = SubResource( 11 )
states/idle/position = Vector2( 651, 269 )
states/jump/node = SubResource( 25 )
states/jump/position = Vector2( 394, 160 )
states/takeDamage/node = SubResource( 12 )
states/takeDamage/position = Vector2( 651, 392 )
states/walk/node = SubResource( 13 )
states/walk/position = Vector2( 651, 139 )
transitions = [ "attack", "idle", SubResource( 14 ), "idle", "attack", SubResource( 15 ), "walk", "idle", SubResource( 16 ), "idle", "walk", SubResource( 17 ), "idle", "takeDamage", SubResource( 18 ), "takeDamage", "idle", SubResource( 19 ), "walk", "attack", SubResource( 20 ), "idle", "death", SubResource( 21 ), "takeDamage", "attack", SubResource( 23 ), "walk", "jump", SubResource( 26 ), "jump", "walk", SubResource( 27 ), "idle", "jump", SubResource( 28 ), "jump", "idle", SubResource( 29 ), "attack", "jump", SubResource( 30 ), "jump", "attack", SubResource( 31 ) ]
start_node = "idle"
end_node = "death"
graph_offset = Vector2( 172, 105 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=10]

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 6.52525, 4.69333 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 1.8, 1.8 )
collision_mask = 6
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 2, 9 )
current = true
limit_top = 0
limit_bottom = 0

[node name="playerSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 23
vframes = 5
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 3 )
anims/death = SubResource( 5 )
anims/idle = SubResource( 1 )
anims/jump = SubResource( 24 )
anims/takeDamage = SubResource( 4 )
anims/walk = SubResource( 2 )

[node name="playerCollision" type="CollisionShape2D" parent="."]
position = Vector2( 2, 9 )
shape = SubResource( 6 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 9 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 10 )

[node name="attack2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="leftColision" type="CollisionShape2D" parent="attack2D"]
position = Vector2( -10.2781, -0.833 )
rotation = -2.09368e-06
scale = Vector2( 3.533, -6.451 )
shape = SubResource( 22 )

[node name="rightColision" type="CollisionShape2D" parent="attack2D"]
position = Vector2( 15.8333, -0.833336 )
rotation = -3.14159
scale = Vector2( 3.53328, -6.45124 )
shape = SubResource( 22 )

[node name="CanvasLayer" parent="." instance=ExtResource( 3 )]

[node name="sword" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="bgs" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="death" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="body_entered" from="attack2D" to="." method="damageEnemy"]
